landing page done for now

--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -3,12 +3,15 @@
 </div>
 <ul class="nav justify-content-center">
   <li class="nav-item" [routerLinkActive]="['link-active']">
-    <a [routerLink]="['home']" [routerLinkActive]="['active']" class="nav-link"
+    <a
+    data-nav-course-home
+    [routerLink]="['home']" [routerLinkActive]="['active']" class="nav-link"
       >Hypertheory Training</a
     >
   </li>
   <li class="nav-item" [routerLinkActive]="['link-active']">
     <a
+    data-nav-course-list
       [routerLink]="['courses']"
       [routerLinkActive]="['active']"
       class="nav-link"
