--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -1,2 +1,4 @@
-<h2>Hypertheory Training Courses</h2>
-<router-outlet></router-outlet>
+<section data-courses-component>
+  <h2>Hypertheory Training Courses</h2>
+  <router-outlet></router-outlet>
+</section>
