--- a/src/app/features/auth/components/login-form/login-form.component.html
+++ b/src/app/features/auth/components/login-form/login-form.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="form" (ngSubmit)="login()">
   <div class="form-group">
     <label for="userName">User Name</label>
-    <input class="form-control" formControlName="userName" id="userName" />
+    <input data-auth-user-name class="form-control" formControlName="userName" id="userName" />
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" formControlName="password" id="password" />
+    <input data-auth-password type="password" formControlName="password" id="password" />
   </div>
   <button type="submit" class="btn btn-primary">Log In</button>
 </form>
