--- a/src/app/features/courses/components/enroll/enroll.component.html
+++ b/src/app/features/courses/components/enroll/enroll.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
           <label for="dateOfCourse">Date of Course</label>
-          <select class="form-control" formControlName="dateOfCourse" #foci>
+          <select data-enrollment-date-list class="form-control" formControlName="dateOfCourse" #foci>
             <option *ngFor="let d of model.dates" [value]="d.startDate">
               {{ d.startDate | date }} - {{ d.endDate | date }} ({{
                 d.numberOfDays
