before refactor to library

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -3,3 +3,7 @@
   <p>Hypertheory Training provides training for software developers.</p>
   <p>Click "course list" above to see our available courses.</p>
 </div>
+<section>
+  <p class="subheading">Another H3</p>
+  <p class="heading">This is another h1</p>
+</section>
